--- a/styles/master.scss
+++ b/styles/master.scss
@@ -7,6 +7,7 @@
   padding: 0;
   overflow-x: hidden;
   line-height: 1.5;
+  -webkit-text-size-adjust: 100%; // Prevent landscape text scaling on IOS.
 }
 
 body {
